<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/line_color_thirst"
    android:orientation="vertical">

    <include layout="@layout/base_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/line_color_thirst"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/width_100dp"
                android:layout_height="@dimen/width_100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/width_54dp"
                android:src="@mipmap/sign_in_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_tv1"
                    android:textColor="@color/text_color_first"
                    android:textSize="@dimen/text_size_14sp" />

                <TextView
                    android:id="@+id/tv_integral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/main_red"
                    android:textSize="@dimen/text_size_14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/integral_tv"
                    android:textColor="@color/text_color_first"
                    android:textSize="@dimen/text_size_14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_0.5dp"
                android:layout_marginTop="@dimen/width_54dp"
                android:background="@color/line_color_first" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:layout_marginTop="@dimen/width_34dp"
                android:text="@string/integral_tv_rule"
                android:textColor="@color/main_brown"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:layout_marginRight="@dimen/margin_15dp"
                android:layout_marginTop="@dimen/margin_14dp"
                android:text="@string/integral_detail"
                android:textColor="@color/text_color_first"
                android:textSize="@dimen/text_size_16sp" />

            <Button
                android:id="@+id/sign_in_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_44dp"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:layout_marginRight="@dimen/margin_15dp"
                android:layout_marginTop="@dimen/width_34dp"
                android:background="@drawable/gray_solid_shape"
                android:clickable="false"
                android:text="@string/home_sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout> 
