<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/line_color_thirst"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_fffbfa">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/photo_gridview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_7.5dp"
            android:layout_marginRight="@dimen/margin_7.5dp"
            android:layout_marginTop="@dimen/margin_7.5dp"
            android:background="@color/color_fffbfa"
            app:layoutManager="android.support.v7.widget.GridLayoutManager"
            app:spanCount="4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45dp"
        android:background="@color/color_fffbfa"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:text="@string/circle_type"
            android:textColor="@color/text_color_first"
            android:textSize="@dimen/text_size_14sp" />

        <TextView
            android:id="@+id/post_choose_type"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/margin_15dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/circle_type_hint"
            android:textColor="@color/text_color_thirst"
            android:textSize="@dimen/text_size_14sp" />

        <ImageView
            android:layout_width="@dimen/width_12dp"
            android:layout_height="@dimen/width_12dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/margin_15dp"
            android:src="@mipmap/right_icon" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_0.5dp"
        android:background="@color/line_color_first" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45dp"
        android:background="@color/color_fffbfa"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:text="@string/posts_title"
            android:textColor="@color/text_color_first"
            android:textSize="@dimen/text_size_14sp" />

        <EditText
            android:id="@+id/post_title"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/post_title_hint"
            android:textColor="@color/text_color_thirst"
            android:textColorHint="@color/text_color_thirst"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_size_14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_fffbfa"
        android:paddingBottom="15dp">

        <EditText
            android:id="@+id/post_content"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/et_posts_solid"
            android:gravity="left"
            android:hint="@string/posts_content_hint"
            android:padding="15dp"
            android:textColor="@color/text_color_thirst"
            android:textColorHint="@color/text_color_thirst"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_size_14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_0.5dp"
        android:background="@color/line_color_first" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/margin_15dp"
        android:gravity="center"
        android:text="@string/video_url"
        android:textColor="@color/text_color_first"
        android:textSize="@dimen/text_size_14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_fffbfa"
        android:paddingBottom="15dp">

        <EditText
            android:id="@+id/video_url"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/et_posts_solid"
            android:gravity="left"
            android:hint="想上传视频可以填写Url地址"
            android:padding="15dp"
            android:textColor="@color/text_color_thirst"
            android:textColorHint="@color/text_color_thirst"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_size_14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_0.5dp"
        android:background="@color/line_color_first" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/line_color_thirst"
        android:gravity="center">

        <TextView
            android:id="@+id/read_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_rule"
            android:textColor="@color/main_brown"
            android:textSize="@dimen/text_size_14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/post_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45dp"
        android:layout_marginLeft="@dimen/margin_15dp"
        android:layout_marginRight="@dimen/margin_15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/red_solid_shape"
        android:text="@string/post_posts_button"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18sp" />

</LinearLayout>