<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/line_color_thirst"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/search_header_type"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_69.5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/select_good"
            android:layout_width="@dimen/width_40dp"
            android:layout_height="@dimen/width_40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_15dp"
            android:background="@drawable/cyclopedia_circle_shape"
            android:gravity="center"
            android:text="@string/good_tv"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_12sp" />

        <TextView
            android:id="@+id/select_cyclopedia"
            android:layout_width="@dimen/width_40dp"
            android:layout_height="@dimen/width_40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_15dp"
            android:background="@drawable/good_circle_shape"
            android:gravity="center"
            android:text="@string/cyclopedia_tv"
            android:textColor="@color/text_color_thirst"
            android:textSize="@dimen/text_size_12sp" />

        <TextView
            android:id="@+id/select_posts"
            android:layout_width="@dimen/width_40dp"
            android:layout_height="@dimen/width_40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_15dp"
            android:background="@drawable/good_circle_shape"
            android:gravity="center"
            android:text="藏友圈"
            android:textColor="@color/text_color_thirst"
            android:textSize="@dimen/text_size_12sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/search_history"
            android:textColor="@color/text_color_thirst"
            android:textSize="@dimen/text_size_12sp" />

        <TextView
            android:id="@+id/search_history_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_15dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/search_history_clear"
            android:textColor="@color/main_red"
            android:textSize="@dimen/text_size_12sp" />

    </RelativeLayout>

    <com.property.colpencil.colpencilandroidlibrary.Ui.AdapterView.MosaicGridView
        android:id="@+id/search_article_history_gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="4"
        android:visibility="visible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_0.5dp"
        android:background="@color/line_color_first" />

    <TextView
        android:id="@+id/tv_hot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:layout_marginLeft="@dimen/margin_15dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/search_hot"
        android:textColor="@color/text_color_thirst"
        android:textSize="@dimen/text_size_12sp" />

    <com.property.colpencil.colpencilandroidlibrary.Ui.AdapterView.MosaicGridView
        android:id="@+id/search_article_hot_gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="4" />

</LinearLayout>