<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.property.colpencil.colpencilandroidlibrary.Ui.NoScrollViewPager
        android:id="@+id/main_viewpage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@mipmap/bottom_menu"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_homepage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_homepage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/btn_homepage_unpressure" />

            <TextView
                android:id="@+id/tv_homepage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_tab_homepage"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_classification"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_classification"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/btn_classification_unpressure" />

            <TextView
                android:id="@+id/tv_classification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_tab_classification"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_discovery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_discovery"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/btn_discovery_unpressure" />

            <TextView
                android:id="@+id/tv_discovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_tab_discovery"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_cyclopedia"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_cyclopedia"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/btn_cyclopedia_unpressure" />

            <TextView
                android:id="@+id/tv_cyclopedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_tab_cyclopedia"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_me"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/btn_tab_me_unpressure" />

            <TextView
                android:id="@+id/tv_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_tab_me"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>