<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/popwindow_null"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_0dp"
        android:layout_weight="1"
        android:background="@color/transparent_7f000000" />

    <LinearLayout
        android:id="@+id/popwindow_photo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_44dp"
        android:background="@color/white"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/photo_tv"
            android:textColor="@color/text_color_first"
            android:textSize="@dimen/text_size_18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_0.5dp"
        android:background="@color/line_color_second" />

    <LinearLayout
        android:id="@+id/popwindow_video"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_44dp"
        android:background="@color/white"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/video_tv"
            android:textColor="@color/text_color_first"
            android:textSize="@dimen/text_size_18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_0.5dp"
        android:background="@color/line_color_second" />

    <LinearLayout
        android:id="@+id/popwindow_cancle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_44dp"
        android:background="@color/white"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/cancle_tv"
            android:textColor="@color/text_color_first"
            android:textSize="@dimen/text_size_18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_0.5dp"
        android:background="@color/line_color_second" />
</LinearLayout>